fix: Update navbar width to avoid overflow-x

--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -1,6 +1,6 @@
 .nav {
   border: 1px solid #979797;
-  width: 100vw;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
